--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@ body {
   top: 0;
   bottom: 0;
   left: 0;
-  rigth: 0;
-
+  right: 0;
+  font: "Roboto Mono";
 }
 
 
@@ -67,4 +67,43 @@ nav .profile-link a {
 nav .nav-logo-container img {
   width: 220px;
   margin-top: 10px;
+}
+.main {
+  display: flex;
+}
+.main-foto-container img {
+ position: relative;
+ width: 100%;
+ height: 100vh;
+
+}
+
+.main-text-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.main-text-container p {
+  font-size: 60px;
+  font: "Roboto Slab";
+  color: white;
+}
+
+.main-button-container button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.main-button-container {
+position: absolute;
+top: 70%;
+left: 50%;
+transform: translate(-50%, -50%);
 }
