--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  font: "Roboto Mono";
+  font-family: "Roboto Mono";
 }
 
 
@@ -71,39 +71,92 @@ nav .nav-logo-container img {
 .main {
   display: flex;
 }
-.main-foto-container img {
- position: relative;
- width: 100%;
- height: 100vh;
-
+.home-main {
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr;
+  height: 100%;
+  background-image: url('../assets/img/Cover.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.main-text-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.home-main section {
+  display: grid;
+  grid-column: 2;
+  justify-items: center;
+  height: 350px;
+  margin-top: 80px;
 }
 
-.main-text-container p {
-  font-size: 60px;
-  font: "Roboto Slab";
+.home-main-text {
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 10px;
   color: white;
+  font-family: "Roboto Mono";
 }
 
-.main-button-container button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+.home-main-button {
+  width: 100px;
+  height: 50px;
+  background: #47cfac;
+  display: grid;
+  align-items: center;
 }
-.main-button-container {
-position: absolute;
-top: 70%;
-left: 50%;
-transform: translate(-50%, -50%);
+
+.blogs-main {
+  background-color: rgba(112, 112, 112, .5);
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  grid-gap: 0 20px;
+  grid-template: 60px 582px / 2fr minmax(360px, 1fr);
+}
+
+.blogs-main img {
+  justify-items: center;
+  margin-left: 30px;
+  margin-top: 60px;
+  width: 2fr;
+  height: 480px;
+  grid-row: 1;
+  grid-column: 1;
+}
+
+.blogs-main-title {
+  font-size: 24px;
+  margin-bottom: 2px;
+  margin-left: 70px;
+  grid-column: 1;
+  grid-row: 1;
+}
+.blogs-main-post-title {
+  font-size: 36px;
+  font-weight: bold;
+  grid-row: 2;
+  grid-column: 2;
+
+}
+
+.blogs-main-post-text {
+  display: grid;
+  grid-column: 2;
+  grid-row: 2;
+  margin-top: 150px;
+
+  width: minmax(600px, 1fr);
+
+}
+
+.blogs-main-button {
+  grid-column: 2;
+  grid-row: 2;
+  width: 100px;
+  height: 50px;
+  background-color: rgba(71, 207, 172, 0.5);
+  border: 1px solid #47cfac;
+  display: grid;
+  align-items: center;
+ margin-top: 300px;
 }
