--- a/css/main.css
+++ b/css/main.css
@@ -9,26 +9,27 @@ body {
   font-family: "Roboto Mono";
 }
 
-
 a {
   text-decoration: none;
   display: inline;
   color: black;
   width: 100%;
-
 }
+
 header {
   width: 100vh;
   height: 140px;
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
+
 .header-icons-container {
   width: 100vw;
   height: 50px;
   display: grid;
   background-color: #47cfac;
 }
+
 .header-icons-container .icons {
   width: 350px;
   height: auto;
@@ -53,24 +54,28 @@ nav {
 nav .nav-logo-container {
   margin-left: 50px;
 }
+
 nav .profile-link {
   display: grid;
   align-items: center;
   margin-right: 50px;
   justify-content: flex-end;
 }
+
 nav .profile-link a {
   border-bottom: 1px solid black;
   color: black;
-
 }
+
 nav .nav-logo-container img {
   width: 220px;
   margin-top: 10px;
 }
+
 .main {
   display: flex;
 }
+
 .home-main {
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
@@ -118,8 +123,8 @@ nav .nav-logo-container img {
   justify-items: center;
   margin-left: 30px;
   margin-top: 60px;
-  width: 2fr;
-  height: 480px;
+  width: 90%;
+  height: auto;
   grid-row: 1;
   grid-column: 1;
 }
@@ -131,12 +136,12 @@ nav .nav-logo-container img {
   grid-column: 1;
   grid-row: 1;
 }
+
 .blogs-main-post-title {
   font-size: 36px;
   font-weight: bold;
   grid-row: 2;
   grid-column: 2;
-
 }
 
 .blogs-main-post-text {
@@ -144,9 +149,7 @@ nav .nav-logo-container img {
   grid-column: 2;
   grid-row: 2;
   margin-top: 150px;
-
   width: minmax(600px, 1fr);
-
 }
 
 .blogs-main-button {
@@ -158,5 +161,149 @@ nav .nav-logo-container img {
   border: 1px solid #47cfac;
   display: grid;
   align-items: center;
- margin-top: 300px;
+  margin-top: 300px;
+}
+
+.blogpost-container {}
+
+.articulos {
+  display: grid;
+  height: 100vh;
+  grid-template: 1fr 1fr / 60px 1fr 1fr 1fr 60px;
+  column-gap: 20px;
+  row-gap: 5px;
+}
+
+.articulo1 {
+  grid-column: 2;
+  grid-row: 1;
+  display: grid;
+  grid-template-rows: 2fr 1fr 2fr 1fr;
+}
+
+.articulo2 {
+  grid-column: 3;
+  grid-row: 1;
+  display: grid;
+  grid-template-rows: 2fr 1fr 2fr 1fr;
+}
+
+.articulo3 {
+  grid-column: 4;
+  grid-row: 1;
+  display: grid;
+  grid-template-rows: 2fr 1fr 2fr 1fr;
+}
+
+.articulo4 {
+  grid-column: 2;
+  grid-row: 2;
+  display: grid;
+  grid-template-rows: 2fr 1fr 2fr 1fr; 
+}
+
+.articulo5 {
+  grid-column: 3;
+  grid-row: 2;
+  display: grid;
+  grid-template-rows: 2fr 1fr 2fr 1fr;
+}
+
+.articulo6 {
+  grid-column: 4;
+  grid-row: 2;
+  display: grid;
+  grid-template-rows: 2fr 1fr 2fr 1fr;
+}
+
+.articulos p title {
+  grid-row: 2;
+}
+
+.articulos span img {
+  width: 100%;
+  height: auto;
+}
+.articulo1-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+.articulo1-button {
+  grid-row: 4;
+  width: 100px;
+  height: 50px;
+  background-color: rgba(71, 207, 172, 0.5);
+  border: 1px solid #47cfac;
+  display: grid;
+  align-items: center;
+}
+
+.articulo2-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+.articulo2-button {
+  grid-row: 4;
+  width: 100px;
+  height: 50px;
+  background-color: rgba(71, 207, 172, 0.5);
+  border: 1px solid #47cfac;
+  display: grid;
+  align-items: center;
+}
+
+.articulo3-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+.articulo3-button {
+  grid-row: 4;
+  width: 100px;
+  height: 50px;
+  background-color: rgba(71, 207, 172, 0.5);
+  border: 1px solid #47cfac;
+  display: grid;
+  align-items: center;
+}
+
+.articulo4-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+.articulo4-button {
+  grid-row: 4;
+  width: 100px;
+  height: 50px;
+  background-color: rgba(71, 207, 172, 0.5);
+  border: 1px solid #47cfac;
+  display: grid;
+  align-items: center;
+}
+
+.articulo5-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+.articulo5-button {
+  grid-row: 4;
+  width: 100px;
+  height: 50px;
+  background-color: rgba(71, 207, 172, 0.5);
+  border: 1px solid #47cfac;
+  display: grid;
+  align-items: center;
+}
+
+.articulo6-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+.articulo6-button {
+  grid-row: 4;
+  width: 100px;
+  height: 50px;
+  background-color: rgba(71, 207, 172, 0.5);
+  border: 1px solid #47cfac;
+  display: grid;
+  align-items: center;
 }
