--- a/css/main.css
+++ b/css/main.css
@@ -109,206 +109,27 @@ nav .nav-logo-container img {
   display: grid;
   align-items: center;
 }
-
 .blogs-main {
-  background-color: rgba(112, 112, 112, .5);
-  display: grid;
-  width: 100vw;
-  height: 100vh;
-  grid-gap: 0 20px;
-  grid-template: 60px 582px / 2fr minmax(360px, 1fr);
+    display: grid;
 }
+.blogs-news-container {
+    background-color: #e6e9ed;
+    padding: 0 50px 40px;
+}
+.blogs-main-new {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 2fr;
+}
+.blogs-news-img-container {
+    grid-column: 1;
+}
+.blogs-news-img-container img {
 
-.blogs-main img {
-  justify-items: center;
-  margin-left: 30px;
-  margin-top: 60px;
-  width: 90%;
-  height: auto;
-  grid-row: 1;
-  grid-column: 1;
 }
-
-.blogs-main-title {
-  font-size: 24px;
-  margin-bottom: 2px;
-  margin-left: 70px;
-  grid-column: 1;
-  grid-row: 1;
+.blogs-news-info-container {
+    grid-column: 2;
 }
-
-.blogs-main-post-title {
-  font-size: 36px;
-  font-weight: bold;
-  grid-row: 2;
-  grid-column: 2;
-}
-
-.blogs-main-post-text {
-  display: grid;
-  grid-column: 2;
-  grid-row: 2;
-  margin-top: 150px;
-  width: minmax(600px, 1fr);
-}
-
-.blogs-main-button {
-  grid-column: 2;
-  grid-row: 2;
-  width: 100px;
-  height: 50px;
-  background-color: rgba(71, 207, 172, 0.5);
-  border: 1px solid #47cfac;
-  display: grid;
-  align-items: center;
-  margin-top: 300px;
-}
-
-.blogpost-container {}
-
-.ultimos-blogpost {
-  text-align: center;
-}
-
-
-.articulos {
-  display: grid;
-  height: 50vh;
-  grid-template: 1fr 1fr / 60px 1fr 1fr 1fr 60px;
-  column-gap: 20px;
-  row-gap: 5px;
-}
-
-.articulo1 {
-  grid-column: 2;
-  grid-row: 1;
-  display: grid;
-  grid-template-rows: 2fr 1fr 2fr 1fr;
-}
-
-.articulo2 {
-  grid-column: 3;
-  grid-row: 1;
-  display: grid;
-  grid-template-rows: 2fr 1fr 2fr 1fr;
-}
-
-.articulo3 {
-  grid-column: 4;
-  grid-row: 1;
-  display: grid;
-  grid-template-rows: 2fr 1fr 2fr 1fr;
-}
-
-.articulo4 {
-  grid-column: 2;
-  grid-row: 2;
-  display: grid;
-  grid-template-rows: 2fr 1fr 2fr 1fr; 
-}
-
-.articulo5 {
-  grid-column: 3;
-  grid-row: 2;
-  display: grid;
-  grid-template-rows: 2fr 1fr 2fr 1fr;
-}
-
-.articulo6 {
-  grid-column: 4;
-  grid-row: 2;
-  display: grid;
-  grid-template-rows: 2fr 1fr 2fr 1fr;
-}
-
-.articulos p title {
-  grid-row: 2;
-}
-
-.articulos span img {
-  width: 100%;
-  height: auto;
-}
-.articulo1-title {
-  font-size: 24px;
-  font-weight: 600;
-}
-.articulo1-button {
-  grid-row: 4;
-  width: 100px;
-  height: 50px;
-  background-color: rgba(71, 207, 172, 0.5);
-  border: 1px solid #47cfac;
-  display: grid;
-  align-items: center;
-}
-
-.articulo2-title {
-  font-size: 24px;
-  font-weight: 600;
-}
-.articulo2-button {
-  grid-row: 4;
-  width: 100px;
-  height: 50px;
-  background-color: rgba(71, 207, 172, 0.5);
-  border: 1px solid #47cfac;
-  display: grid;
-  align-items: center;
-}
-
-.articulo3-title {
-  font-size: 24px;
-  font-weight: 600;
-}
-.articulo3-button {
-  grid-row: 4;
-  width: 100px;
-  height: 50px;
-  background-color: rgba(71, 207, 172, 0.5);
-  border: 1px solid #47cfac;
-  display: grid;
-  align-items: center;
-}
-
-.articulo4-title {
-  font-size: 24px;
-  font-weight: 600;
-}
-.articulo4-button {
-  grid-row: 4;
-  width: 100px;
-  height: 50px;
-  background-color: rgba(71, 207, 172, 0.5);
-  border: 1px solid #47cfac;
-  display: grid;
-  align-items: center;
-}
-
-.articulo5-title {
-  font-size: 24px;
-  font-weight: 600;
-}
-.articulo5-button {
-  grid-row: 4;
-  width: 100px;
-  height: 50px;
-  background-color: rgba(71, 207, 172, 0.5);
-  border: 1px solid #47cfac;
-  display: grid;
-  align-items: center;
-}
-
-.articulo6-title {
-  font-size: 24px;
-  font-weight: 600;
-}
-.articulo6-button {
-  grid-row: 4;
-  width: 100px;
-  height: 50px;
-  background-color: rgba(71, 207, 172, 0.5);
-  border: 1px solid #47cfac;
-  display: grid;
-  align-items: center;
+.blogs-news-info-container p {
+    margin-bottom: 35px;
 }
