--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,20 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: "Roboto Mono";
+}
+
+.home-body {
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  font-family: "Roboto Mono";
+}
+
+.grid-container {
+  max-width: 980px;
+  margin: auto;
 }
 
 a {
@@ -116,7 +124,7 @@ nav .nav-logo-container img {
     background-color: #e6e9ed;
     padding: 0 50px 40px;
 }
-.blogs-main-new {
+.grid-container-blogs-main-news {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 2fr;
@@ -125,11 +133,56 @@ nav .nav-logo-container img {
     grid-column: 1;
 }
 .blogs-news-img-container img {
-
+   width: 85%;
 }
 .blogs-news-info-container {
     grid-column: 2;
 }
 .blogs-news-info-container p {
     margin-bottom: 35px;
+}
+
+.blogs-posts-container {
+  padding: 0 50px 40px;
+}
+
+.blogs-posts-container h3 {
+  border-bottom: 1px solid #cdd2da;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.blogs-button {
+  border: 1px solid #47cfac;
+  padding: 10px 15px; 
+  text align: center;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.blogs-posts-container .posts-container {
+  display: inline-block;
+  padding-left: 10px;
+  max-width: 30%;
+  margin-bottom: 50px;
+}
+ 
+.blogs-posts-container .posts-container p {
+  margin-bottom: 35px;
+}
+.blogs-posts-container .posts-container img {
+  width: 100%;
+}
+
+footer {
+  width: 100%;
+  height: 80px; 
+  background-color: #22272d;
+  border-top: 35px solid #47cfac;
+  color: white;
+  text-align: center;
+}
+
+footer p {
+  margin-top: 30px;
 }
